refactor: update instance handling to use GameInstanceID in various classes